# back-garden

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
JardiPotes/: asgi.py  settings.py  urls.py  wsgi.py
Jardipotes/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  factory.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
accounts/factories/: garden.py  user.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_alter_user_profile_image.py  0002_alter_users_user_name.py  0002_garden_photo.py  0003_alter_user_profile_image.py  0003_garden_created_at_garden_updated_at_user_created_at_and_more.py  0003_rename_user_name_users_username.py  0003_user_experience.py  0004_alter_user_experience_alter_user_profile_image.py  0004_alter_user_profile_image.py  0004_user_nickname.py  0004_users_has_garden_users_is_active.py  0005_alter_photo_ismainphoto_alter_photo_season.py  0005_alter_user_profile_image.py  0005_alter_users_bio.py  0005_remove_photo_photourl_photo_image_photo_slug.py  0005_remove_photo_photourl_photo_image_photo_slug_and_more.py  0006_alter_user_profile_image.py  0006_alter_users_is_active.py  0007_alter_users_email.py  0008_user_delete_users.py  0009_remove_user_is_active.py  0010_alter_user_email_alter_user_password_and_more.py  0011_alter_user_password.py
accounts/templates/: user_reset_password.html  user_reset_password.txt
apis/: admin.py  factory.py  models.py  permissions.py  serializers.py  tests.py  views.py
apis/migrations/: 0001_initial.py  0002_alter_photo_image.py  0002_rename_ismainphoto_photo_is_main_photo.py  0002_rename_senderd_message_sender.py  0003_alter_photo_season.py  0003_comment.py  0003_rename_conversationd_message_conversation.py  0004_alter_comment_created_at_alter_comment_updated_at.py  0004_conversation_message.py  0005_conversation_updated_at.py  (+5 more)
core/: asgi.py  settings.py  urls.py  wsgi.py
pomme_d_API/: apps.py
user_authentications/: models.py  tests.py  urls.py  views.py
(+11 files in other folders)
