[tool.poetry]
name = "back-garden"
version = "0.1.0"
description = "Share your garden, or theirs!"
authors = ["Victoire, Quentin, Isciane, Constant"]
license = "MIT"
readme = "README.md"
packages = [{include = "back_garden"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
autopep8 = "^1.7.0"
factory-boy = "^3.2.1"
Faker = "^14.2.0"
psycopg2 = { version = "^2.9.3", optional = true }
pytest = "^7.1.3"
django-environ = "^0.9.0"
djangorestframework = "^3.14.0"

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]
databases = ["mysqlclient", "psycopg2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
